Project cleanup.